tauri/src/enroute/queue/snapshots/updraft_tauri_lib__enroute__queue__tests__retry_status_hides_the_failure_until_cancellation-2.snap
---
source: tauri/src/enroute/queue/tests.rs
expression: "*status.borrow()"
---
[
    DownloadStatus {
        path: "Europe/Germany.mbtiles",
        state: Queued,
    },
]
