tauri/src/enroute/queue/snapshots/updraft_tauri_lib__enroute__queue__tests__retry_status_hides_the_failure_until_cancellation.snap
---
source: tauri/src/enroute/queue/tests.rs
expression: failed
---
[
    DownloadStatus {
        path: "Europe/Germany.mbtiles",
        state: Failed,
    },
]
