tauri/src/enroute/queue/snapshots/updraft_tauri_lib__enroute__queue__tests__subscribers_receive_current_state_and_coalesced_progress.snap
---
source: tauri/src/enroute/queue/tests.rs
expression: "*status.borrow_and_update()"
---
[
    DownloadStatus {
        path: "Europe/Germany.mbtiles",
        state: Downloading {
            downloaded: 12,
            total: 10,
        },
    },
    DownloadStatus {
        path: "Europe/France.mbtiles",
        state: Queued,
    },
]
